--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 layout: home
 background: '/img/bg-index.jpg'
 ---
+<meta name="google-site-verification" content="LSqh14upyqz85c6feaBsodqeiFLGSPHtANJ9lDReIiI" />
