--- a/about.html
+++ b/about.html
@@ -5,8 +5,11 @@ description: This is what I do.
 background: '/img/bg-about.jpg'
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
+<p>Hi</p>
+<p>My name is Lamya and i am the writer of this Blog</p>
+<p>i am a phd Student in Artificial intelligence and a Data scientist Freelancer</p>
+<p>I created this blog to help getting deep in some Data science Projetcs</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
 
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+
+<p class="mb-5">Feel free to contact me if you have any qustion or suggestion for this Blog Content !</p>
